# lox

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: ansi.cpp  ansi.h  cursor.cpp  cursor.h  editor.cpp  editor.h  fixed_buffer.cpp  fixed_buffer.h  gap_buffer.cpp  gap_buffer.h  keys.h  main.cpp  piece_table.cpp  piece_table.h  term.cpp  term.h  utils.h
src/buffers/: buffer.cpp  buffer.h  fixed_buffer.cpp  fixed_buffer.h  gap_buffer.cpp  gap_buffer.h  piece.cpp  piece.h  piece_table.cpp  piece_table.h  vt100_buffer.cpp  vt100_buffer.h
src/components/: common.h  controller.cpp  controller.h  cursor.cpp  cursor.h  editor.cpp  editor.h  navigation.cpp  text_view.cpp  text_view.h  view.cpp  view.h
src/controllers/: command_controller.cpp  command_controller.h  common.h  controller.cpp  controller.h  controllers.h  edit_controller.cpp  edit_controller.h
src/models/: command.cpp  command.h  common.h  editor_state.cpp  editor_state.h  text_area.cpp  text_area.h
src/settings/: config.h  theme.cpp  theme.h
src/syntax/: cpp.h  grammar.cpp  grammar.h  tokenize.cpp  tokenize.h
src/term/: ansi.cpp  ansi.h  keys.h  term.cpp  term.h
src/text/: navigation.cpp  navigation.h
src/utils/: array.h  array_buffer.h  array_list.h  ascii.h  convert.cpp  convert.h  geometry.cpp  geometry.h  io.cpp  io.h  packed_array.cpp  packed_array.h  range.cpp  range.h  slice.cpp  slice.h  units.h
src/views/: command_line.cpp  command_view.cpp  command_view.h  cursor.cpp  cursor.h  edit.cpp  line_counter.cpp  line_counter_view.cpp  line_counter_view.h  main_view.cpp  main_view.h  plain_text.cpp  status_bar.cpp  status_bar_view.cpp  status_bar_view.h  syntax.cpp  syntax_view.cpp  syntax_view.h  text_view.cpp  text_view.h  views.h
